<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="78dp"
        android:text="@string/label_home"
        android:textSize="36sp"
        android:typeface="sans"
        app:fontFamily="sans-serif"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/btn64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="236dp"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="237dp"
        android:background="#f58634"
        android:onClick="abrirTick64"
        android:text="@string/btn_64"
        tools:background="#f58634"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="239dp" />

    <Button
        android:id="@+id/btn128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="234dp"
        android:background="#f58634"
        android:onClick="abrirTick128"
        android:text="@string/btn_128"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="239dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="511dp" />

</RelativeLayout>